# ERL_Robot_Manipulation_Moveit

./: .gitignore  README.md  bash_clone.sh  bash_ssh_stop.sh  dependencies.txt  frames_2024-06-12_11.12.48.gv  requirements.txt
src/hello_moveit/: CMakeLists.txt  package.xml
src/hello_moveit/src/: hello_moveit.cpp
src/mtc_tutorial/: CMakeLists.txt  package.xml
src/mtc_tutorial/src/: mtc_tutorial.cpp
src/my_moveit/: CMakeLists.txt  package.xml
src/my_moveit/launch/: octomap_server_launch.py  panda.launch.py  xarm6_main.launch.py  xarm6_planner_fake.launch.py  xarm6_planner_realmove.launch.py
src/my_moveit/scripts/: camera_calibration.py
src/my_moveit/src/: camera_calibration2.py  my_moveit.cpp  panda_moveit_target_pose.cpp  panda_moveit_target_pose_colobj.cpp  xarm6_moveit_target_pose.cpp  xarm6_moveit_target_pose_colobj.cpp  xarm6_moveit_target_pose_moveit.cpp  xarm6_moveit_target_pose_sub.cpp  xarm6_moveit_target_pose_sub2.cpp
src/my_moveit_python/: package.xml  setup.cfg  setup.py
src/my_moveit_python/scripts/: test_xarm_planner_node_pose.py
src/my_moveit_resources/my_moveit_resources/: CMakeLists.txt  package.xml
src/my_moveit_resources/panda/panda_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/my_moveit_resources/panda/panda_description/urdf/: panda.urdf
src/my_moveit_resources/panda/panda_moveit_config/: .setup_assistant  CHANGELOG.rst  CMakeLists.txt  package.xml
src/my_moveit_resources/panda/panda_moveit_config/config/: panda.urdf.xacro  panda_arm.srdf.xacro  panda_arm_hand.srdf.xacro
src/my_moveit_resources/panda/panda_moveit_config/launch/: demo.launch.py  moveit_rviz.launch.py
src/my_moveit_resources/xarm6/xarm6_description/: CMakeLists.txt  package.xml  xarm6_saved.urdf
src/my_moveit_resources/xarm6/xarm6_description/meshes/xarm6/collision/: base_vhacd.stl  link1_vhacd.stl  link2_vhacd2.stl  link3_vhacd.stl  link4_vhacd.stl  link5_vhacd.stl  link6_vhacd.stl
src/my_moveit_resources/xarm6/xarm6_description/urdf/: xarm6.urdf  xarm6_without_gripper.urdf
src/my_moveit_resources/xarm6/xarm6_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/my_moveit_resources/xarm6/xarm6_moveit_config/config/: gripper.urdf.xacro  gripper_macro.xacro  initial_positions.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  sensors.yaml  xarm6.ros2_control.xacro  xarm6.urdf.xacro  xarm6_gripper.ros2_control.xacro  xarm6_robot_macro.xacro  xarm_gripper_macro.xacro
src/my_moveit_resources/xarm6/xarm6_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  sensor_plugin.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py  xarm6_rviz_display.launch.py
src/ompl-1.6.0/log/: latest_list
src/planners/: CMakeLists.txt  package.xml
src/planners/src/: RRT_Planner.py
src/ros_tutorials/cpp_srvcli/: CMakeLists.txt  package.xml
src/ros_tutorials/cpp_srvcli/src/: add_two_ints_client.cpp
src/ros_tutorials/py_pubsub/: package.xml  setup.py
src/ros_tutorials/py_srvcli/: package.xml  setup.py
src/xarm6_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/xarm6_moveit_config/config/: xarm6.ros2_control.xacro  xarm6.srdf
src/xarm6_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/xarm6_moveit_config_2/: .setup_assistant  CMakeLists.txt  package.xml
src/xarm6_moveit_config_2/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  xarm6.ros2_control.xacro  xarm6.srdf
src/xarm6_moveit_config_2/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
